# pydook

./: LICENSE  README.md  pyproject.toml
src/pydook/: __init__.py
